--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-datepicker": "^1.7.2",
+    "react-native-floating-action": "^1.18.0",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-reanimated": "^1.2.0",
     "react-native-vector-icons": "^6.6.0",
