--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-floating-action": "^1.18.0",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-reanimated": "^1.2.0",
+    "react-native-swipe-list-view": "^2.0.1",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.1",
     "react-redux": "^7.1.1",
