--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-datepicker": "^1.7.2",
+    "react-native-dialog": "^5.6.0",
     "react-native-floating-action": "^1.18.0",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-reanimated": "^1.2.0",
-    "react-native-swipe-list-view": "^2.0.1",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.1",
     "react-redux": "^7.1.1",
