--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "eslint": "^6.1.0",
     "jest": "^24.8.0",
     "metro-react-native-babel-preset": "^0.56.0",
-    "react-test-renderer": "16.8.6"
+    "react-test-renderer": "16.8.6",
+    "reactotron-react-native": "^4.0.2"
   },
   "jest": {
     "preset": "react-native"
