--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "native-base": "^2.13.5",
     "react": "16.8.6",
     "react-native": "0.60.5",
+    "react-native-chart-kit": "^3.11.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-dialog": "^5.6.0",
     "react-native-floating-action": "^1.18.0",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-reanimated": "^1.2.0",
+    "react-native-svg": "^9.13.3",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.1",
     "react-redux": "^7.1.1",
