--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.1",
     "firebase": "^6.6.1",
+    "google-palette": "^1.1.0",
     "native-base": "^2.13.5",
     "react": "16.8.6",
     "react-native": "0.60.5",
