--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.1",
+    "d3-shape": "^1.3.7",
     "firebase": "^6.6.1",
     "google-palette": "^1.1.0",
     "native-base": "^2.13.5",
@@ -21,6 +22,7 @@
     "react-native-gesture-handler": "^1.3.0",
     "react-native-reanimated": "^1.2.0",
     "react-native-svg": "^9.13.3",
+    "react-native-svg-charts": "^5.3.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.1",
     "react-redux": "^7.1.1",
